Upgrade to Java 21 toolchain with Java 8 bytecode target for batclient compatibility
- Updated Maven compiler plugin to 3.14.1 with source/target 1.8
- Added java.io.Serial imports for @Serial annotations on serialVersionUID
- Reverted pattern matching instanceof to Java 8 compatible syntax
- Added maven-antrun-plugin to auto-copy JAR to ~/batclient/plugins
- Removed temporary rewrite.yml OpenRewrite configuration